--- a/app/index.html
+++ b/app/index.html
@@ -45,7 +45,6 @@
     <script src="/bower_components/threejs/examples/js/controls/TransformControls.js"></script>
     <script src="/bower_components/threejs/examples/js/libs/stats.min.js"></script>
     <script src="/bower_components/threejs/examples/js/libs/dat.gui.min.js"></script>
-
     <!-- endbower -->
     <!-- endbuild -->
     
@@ -65,6 +64,7 @@
     <!-- endbuild -->
     
     <!-- build:js scripts/main.js -->
+    <script src="scripts/RWXLoader.js"></script>
     <script src="scripts/main.js"></script>
     <!-- endbuild -->
   </body>
