--- a/app/index.html
+++ b/app/index.html
@@ -43,6 +43,7 @@
     <script src="/bower_components/threejs/build/three.js"></script>
     <script src="/bower_components/threejs/examples/js/Detector.js"></script>
     <script src="/bower_components/threejs/examples/js/controls/TransformControls.js"></script>
+    <script src="/bower_components/threejs/examples/js/controls/OrbitControls.js"></script>
     <script src="/bower_components/threejs/examples/js/libs/stats.min.js"></script>
     <script src="/bower_components/threejs/examples/js/libs/dat.gui.min.js"></script>
     <!-- endbower -->
