lots of fixes and functionality
* Fixed up code style
* Improved coordinate handling to more closely match AW coords
* Removed HTML/CSS creation; made it "static"
* Made dat.GUI controls for object editing

--- a/app/index.html
+++ b/app/index.html
@@ -26,7 +26,13 @@
     <!--[if lt IE 10]>
       <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
-    
+ 
+    <div id="container">
+	    <div id="info">
+		    <a href="http://openworlds.github.io" target="_blank">OpenWorlds</a> - Prototype client
+	    </div>
+    </div>
+
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
     <script>
       (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
