--- a/app/index.html
+++ b/app/index.html
@@ -46,12 +46,10 @@
     <!-- build:js scripts/vendor.js -->
     <!-- bower:js -->
     <script src="/bower_components/jquery/dist/jquery.js"></script>
+    <script src="/bower_components/dat-gui/build/dat.gui.js"></script>
     <script src="/bower_components/threejs/build/three.js"></script>
-    <script src="/bower_components/threejs/examples/js/Detector.js"></script>
-    <script src="/bower_components/threejs/examples/js/controls/TransformControls.js"></script>
     <script src="/bower_components/threejs/examples/js/controls/OrbitControls.js"></script>
-    <script src="/bower_components/threejs/examples/js/libs/stats.min.js"></script>
-    <script src="/bower_components/threejs/examples/js/libs/dat.gui.min.js"></script>
+    <script src="/bower_components/threejs/examples/js/libs/stats.min.js"</script>
     <!-- endbower -->
     <!-- endbuild -->
     
