ZippedRWXLoader: load RWX file from ZIP
This would be able to load files from the actual AW object directory
if it wasn't for JS' forced CORS handling...

--- a/app/index.html
+++ b/app/index.html
@@ -74,6 +74,7 @@
 
     <!-- build:js scripts/main.js -->
     <script src="scripts/RWXLoader.js"></script>
+    <script src="scripts/ZippedRWXLoader.js"></script>
     <script src="scripts/main.js"></script>
     <!-- endbuild -->
   </body>
