--- a/app/index.html
+++ b/app/index.html
@@ -28,9 +28,10 @@
     <![endif]-->
 
     <div id="container">
-	    <div id="info">
-		    <a href="http://openworlds.github.io" target="_blank">OpenWorlds</a> - Prototype client
-	    </div>
+      <div id="info">
+        <select id="worldSelect"></select>
+        <a href="http://openworlds.github.io" target="_blank">OpenWorlds</a> - Prototype client
+      </div>
     </div>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
